--- a/settings.json
+++ b/settings.json
@@ -1,18 +1,18 @@
 {
     "self_mode": false,
 	"autobio": false,
-	"antihidetag": true,
-	"user_register": false,
+	"antihidetag": false,
+	"user_register": true,
 	"anti_delete" : false,
-	"anticall": false,
+	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"ownerNumber": "6289662643883",
+	"ownerNumberr": "6289662643883",
+	"cr": "@netshh_",
+	"ownername": "Erlangga",
+	"botname":"Netsh Bot",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  Netsh Bot  」\nCreated By @netshh_"
 }
